--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.82-0ubuntu0) lmn7; urgency=low
+
+  * merge #117: Add functionality for multi-school installations.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 26 Apr 2021 16:29:00 +0200
+
 linuxmuster-base7 (7.0.81-0ubuntu0) lmn7; urgency=low
 
   * fix #115: create also a reverse dns entry for dynamic dhcp clients.
