--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 linuxmuster-base7 (7.0.82-0ubuntu0) lmn7; urgency=low
 
   * merge #117: Add functionality for multi-school installations.
+  * merge #119: Fix dhcp in multi schools and add maintenance table.
+  * fix #122: Error in import-devices.
+  * replace os.system with subprocess in linuxmuster-import-devices (#121).
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 26 Apr 2021 16:29:00 +0200
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 09 Jun 2021 07:27:40 +0000
 
 linuxmuster-base7 (7.0.81-0ubuntu0) lmn7; urgency=low
 
