--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+linuxmuster-base7 (7.0.83-0ubuntu0) lmn7; urgency=low
+
+  * introduces new global variable LINBOIMGDIR.
+  * linuxmuster-import-devices skips group specific start.conf links for linuxmuster-linbo >= 4
+    (according to https://github.com/linuxmuster/linuxmuster-linbo7/issues/12).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 31 Jul 2021 13:01:47 +0000
+
 linuxmuster-base7 (7.0.82-0ubuntu0) lmn7; urgency=low
 
   * merge #117: Add functionality for multi-school installations.
