--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,23 @@
+linuxmuster-base7 (7.1.1-1) lmn71; urgency=low
+
+  * fixed changelog timezone.
+  * exclude .github directory from source package.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 27 Nov 2021 18:15:00 +0100
+
+linuxmuster-base7 (7.1.1-0) lmn71; urgency=low
+
+  * fix console message time format.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 25 Nov 2021 23:10:00 +0100
+
 linuxmuster-base7 (7.1.0-0) lmn71; urgency=low
 
   * lmn71 prerelease.
   * workflow implementation.
   * remove docker, mail & opsi setup.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 25 Nov 2021 13:57:00 +0001
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 25 Nov 2021 13:57:00 +0100
 
 linuxmuster-base7 (7.0.83-0ubuntu0) lmn7; urgency=low
 
