Fix #127: Remove all deprecated opsi, docker and mailserver setup code, further function & setup fixes.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linuxmuster-base7 (7.1.2-0) lmn71; urgency=low
+
+  * Fix #127: remove finally all deprecated docker, mail and opsi setup code.
+  * several further function & setup fixes.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 20 Dec 2021 12:37:00 +0100
+
 linuxmuster-base7 (7.1.1-1) lmn71; urgency=low
 
   * fixed changelog timezone.
