--- a/debian/devices.csv.5
+++ b/debian/devices.csv.5
@@ -71,9 +71,9 @@ Only certain rolenames are valid.
 .TP
 .B Field 11: pxe flag
 .br
-Possible values 0-3:
+Possible values 0, 1:
 .br
-0: no pxe, 1: linbo pxe, 2: linbo pxe + opsi mgmt, 3: opsi pxe
+0: no pxe, 1: linbo pxe
 .TP
 .B Field 12: reserved by linuxmuster.net
 .TP
