--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 linuxmuster-base7 (7.1.3-0) lmn71; urgency=low
 
   * Fix #130: secure admin password entered during setup.
+  * Fix lmn71-prepare invokation during setup.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 28 Dec 2021 10:30:10 +0000
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 28 Dec 2021 11:30:26 +0000
 
 linuxmuster-base7 (7.1.2-0) lmn71; urgency=low
 
