--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.1.4-0) lmn71; urgency=low
+
+  * Refactoring setup code (#129).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 05 Jan 2022 14:06:50 +0000
+
 linuxmuster-base7 (7.1.3-0) lmn71; urgency=low
 
   * Fix #130: secure admin password entered during setup.
