--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 linuxmuster-base7 (7.1.4-0) lmn71; urgency=low
 
   * Refactoring setup code (#129).
+  * Fix #133: empty logfile throws error in sambaTool function.
+  * Fix #134: dhcpd-update-samba-dns.py increases server load.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 05 Jan 2022 14:06:50 +0000
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 19 Jan 2022 17:37:55 +0000
 
 linuxmuster-base7 (7.1.3-0) lmn71; urgency=low
 
