--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.1.11-0) lmn71; urgency=low
+
+  * Fix don't accept $ in passwords.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 03 Jun 2022 15:16:49 +0200
+
 linuxmuster-base7 (7.1.10-0) lmn71; urgency=low
 
   * Fix #139: Old version of paramiko for 18.04.
