--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.1.12-0) lmn71; urgency=low
+
+  * Remove dependency to python3-reconfigure, install it with pip instead (eb94392).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 20 Jun 2022 20:41:00 +0200
+
 linuxmuster-base7 (7.1.11-0) lmn71; urgency=low
 
   * Fix don't accept $ in passwords.
