--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.2.0-0) lmn72; urgency=low
+
+  * remove webui from dependencies temporarily.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 22 Jun 2022 13:05:00 +0200
+
 linuxmuster-base7 (7.1.12-0) lmn71; urgency=low
 
   * Remove dependency to python3-reconfigure, install it with pip instead (eb94392).
