--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.1.13-0) lmn71; urgency=low
+
+  * Merge pull request #142 from linuxmuster/nolog-sophpass (87f95f7).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 30 Jul 2022 11:06:00 +0200
+
 linuxmuster-base7 (7.1.12-0) lmn71; urgency=low
 
   * Remove dependency to python3-reconfigure, install it with pip instead (eb94392).
