--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+linuxmuster-base7 (7.2.0-rc3) lmn72; urgency=low
+
+  * Fix #144: /run/samba/ntp_signd/ directory: wrong permissions prevent time synchronisation.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 10 Sep 2022 14:06:00 +0200
+
 linuxmuster-base7 (7.2.0-rc2) lmn72; urgency=low
 
   * Merge pull request #143 from linuxmuster/fix-sudoers (f2d2e8e).
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 1 Sep 2022 12:20:00 +0200
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 05 Sep 2022 18:50:45 +0200
 
 linuxmuster-base7 (7.2.0-rc1) lmn72; urgency=low
 
