--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.2.0-rc8) lmn72; urgency=low
+
+  * Remove netplan update in linuxmuster-import-subnets (4866dc9).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 25 Jul 2023 21:37:00 +0200
+
 linuxmuster-base7 (7.2.0-rc7) lmn72; urgency=low
 
   * Changed codename to beta-release (8741a6d).
