--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.2.0-rc10) lmn72; urgency=low
+
+  * added netplan gateway fix to linuxmuster-import-subnets (a206eac).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 28 Jul 2023 18:47:49 +0200
+
 linuxmuster-base7 (7.2.0-rc9) lmn72; urgency=low
 
   * revert netplan fix (b50a4ed).
