--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+linuxmuster-base7 (7.2.0-rc11) lmn72; urgency=low
+
+  * postinst: fix permissions of samba's ntp socket directory (f84835a).
+  * linuxmuster-import-subnets: use gateway ip from setup.ini rather than firewall ip (fa83151).
+  * change codename to "release candidate" (8b86c6d).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 01 Aug 2023 11:11:55 +0200
+
 linuxmuster-base7 (7.2.0-rc10) lmn72; urgency=low
 
   * added netplan gateway fix to linuxmuster-import-subnets (a206eac).
