--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linuxmuster-base7 (7.2.1-0) lmn72; urgency=low
+
+  * fix firewall sshkey & gateway setup (496049a).
+  * change codename to "production" (84f0461).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 10 Feb 2024 15:09:37 +0100
+
 linuxmuster-base7 (7.2.0-rc13) lmn72; urgency=low
 
   * introducing new environment variables LINBOSYSDIR and LINBOVARDIR (7687b40).
