Fix invokation of sophomorix-device.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.3.3-0) lmn73; urgency=low
+
+  * fix deletion of symlinks during device import (36f5973).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 16 Mar 2025 13:09:00 +0100
+
 linuxmuster-base7 (7.3.2-0) lmn73; urgency=low
 
   * fix beautifulsoup's xml features (667abf1).
