--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.2.7-0) lmn72; urgency=low
+
+  * fix possibly broken python3-debian package (839db15).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 17 Mar 2025 12:14:00 +0100
+
 linuxmuster-base7 (7.2.6-0) lmn72; urgency=low
 
   * remove lmn72-testing repo from release upgrade script (7ab31cd).
