--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 linuxmuster-base7 (7.3.4-0) lmn73; urgency=low
 
-  * move common files to extra package linuxmuster-common ().
+  * fix #156: move common files to own package linuxmuster-common.
+  * fix all references to moved common files (#156).
+  * add dependency to linuxmuster-common (#156).
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 16 Mar 2025 13:38:56 +0100
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 27 Mar 2025 15:11:55 +0100
 
 linuxmuster-base7 (7.3.3-0) lmn73; urgency=low
 
