--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.3.6-0) lmn73; urgency=low
+
+  * add certificate renewal script (4c4992b).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 29 Mar 2025 14:20:05 +0100
+
 linuxmuster-base7 (7.3.5-0) lmn73; urgency=low
 
   * fix local apparmor configs for dhcpd and ntpd (a116c0e).
