--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 linuxmuster-base7 (7.2.10-0) lmn72; urgency=low
 
   * fix references to environment (3b8d817).
+  * fix #158; final revision of the certificate renewal script.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 31 Mar 2025 10:01:59 +0200
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 31 Mar 2025 19:52:00 +0200
 
 linuxmuster-base7 (7.2.9-0) lmn72; urgency=low
 
