--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linuxmuster-base7 (7.3.8-0) lmn73; urgency=low
+
+  * fix #158: final revision of the certificate renewal script.
+  * add python function catFiles (56d97c7).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 31 Mar 2025 20:39:19 +0200
+
 linuxmuster-base7 (7.3.7-0) lmn73; urgency=low
 
   * reimplement certificates renewal script with python (d04ff0f, aa1ed4a).
