--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.3.12-0) lmn72; urgency=low
+
+  * remove processing of start.conf server option from device import (e178e91).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 16 Apr 2025 19:39:04 +0200
+
 linuxmuster-base7 (7.3.11-0) lmn72; urgency=low
 
   * fix invalid days variable during ssl setup (#160).
