--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.3.13-0) lmn72; urgency=low
+
+  * fix skip firewall setup (6ecd16b).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 17 Apr 2025 10:14:21 +0200
+
 linuxmuster-base7 (7.3.12-0) lmn72; urgency=low
 
   * remove processing of start.conf server option from device import (e178e91).
