--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.2.14-0) lmn72; urgency=low
+
+  * fix boolean in ast cause subnetting import to fail (#161).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 22 Apr 2025 14:05:59 +0200
+
 linuxmuster-base7 (7.2.13-0) lmn72; urgency=low
 
   * fix skip firewall setup (226377b).
