--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.2.15-0) lmn72; urgency=low
+
+  * fix cert bundle renewal (#158).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 25 Apr 2025 11:39:41 +0200
+
 linuxmuster-base7 (7.2.14-0) lmn72; urgency=low
 
   * fix boolean in ast cause subnetting import to fail (#161).
