--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.3.16-0) lmn73; urgency=low
+
+  * remove obsolete references to functions (0fc4236).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 25 Apr 2025 12:28:26 +0200
+
 linuxmuster-base7 (7.3.15-0) lmn73; urgency=low
 
   * fix cert bundle renewal & empty cert list (#158).
