--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.2.16-0) lmn72; urgency=low
+
+  * disable isc-dhcp-server6 during release upgrade (39a5ea2).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 19 May 2025 18:38:09 +0200
+
 linuxmuster-base7 (7.2.15-0) lmn72; urgency=low
 
   * fix cert bundle renewal & empty cert list (#158).
