--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.2.17-0) lmn72; urgency=low
+
+  * fix #164: server cert is not created, if servername is not server.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 31 May 2025 15:22:31 +0200
+
 linuxmuster-base7 (7.2.16-0) lmn72; urgency=low
 
   * disable isc-dhcp-server6 during release upgrade (39a5ea2).
