--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.3.21-0) lmn73; urgency=low
+
+  * restrict fix for ntp.conf (16fe601).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 08 Jul 2025 08:49:31 +0200
+
 linuxmuster-base7 (7.3.20-0) lmn73; urgency=low
 
   * ntpsec fix for ntp.conf (5bc35bf).
