--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.2.19-0) lmn72; urgency=low
+
+  * ensure ntpsec packages are installed after release upgrade (5676599).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 21 Jul 2025 13:14:57 +0200
+
 linuxmuster-base7 (7.2.18-0) lmn72; urgency=low
 
   * fix #167: Fix SSLDIR var.
