--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,15 @@
+linuxmuster-base7 (7.3.25-0) lmn73; urgency=low
+
+  * change codename to release candidate.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 16 Aug 2025 14:47:17 +0200
+
 linuxmuster-base7 (7.3.24-0) lmn73; urgency=low
 
   * fix script header in linuxmuster-update-ntpconf (6426325).
   * fix "#" and allow "@" in passwords (ccc14a3).
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 29 Jul 2025 22:08:13 +0200
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 04 Aug 2025 14:08:14 +0200
 
 linuxmuster-base7 (7.3.23-0) lmn73; urgency=low
 
