--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.3.27-0) lmn73; urgency=low
+
+  * fix missing samba spool directory /var/spool/samba (f1117db).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 06 Oct 2025 19:08:39 +0200
+
 linuxmuster-base7 (7.3.26-0) lmn73; urgency=low
 
   * change codename to "production" (43a80f1).
