Refactor Python code to comply with Debian Python Policy (Phase 1)
This commit restructures the Python codebase to follow Debian Python Policy
guidelines, modernizing the packaging and improving maintainability.

Major changes:
- Create proper Python package structure under src/linuxmuster_base7/
- Add pyproject.toml with complete package metadata (PEP 621)
- Convert all CLI tools to use entry points
- Modernize Debian packaging (dh-python, pybuild)
- Update all imports to use new package namespace
- Remove pip usage and .pth file manipulation from postinst
- Add python3-paramiko as proper Debian dependency

Package structure:
- src/linuxmuster_base7/ - Main package namespace
  - functions.py - Core library module
  - setup/ - Setup modules (a_ini.py through z_final.py)
  - cli/ - CLI tool entry points (9 tools)
  - firewall/ - Firewall integration scripts

Debian packaging:
- debian/control: Added dh-python, python3-setuptools, and build deps
- debian/rules: Simplified using dh with pybuild buildsystem
- debian/postinst: Removed manual Python path manipulation
- debian/install: Adapted for new structure

Benefits:
- Standards-compliant Python packaging
- Automatic dependency tracking via ${python3:Depends}
- Proper bytecode compilation via dh_python3
- Better IDE support and testing capabilities
- Clean namespace separation

Documentation:
- docs/refactoring-phase-1.md - Detailed summary of changes

Note: The environment module remains in linuxmuster-common as it's shared
across multiple packages. This is accessed via sys.path.insert() for
backward compatibility.

Next steps: Test installation, remove old lib/ and sbin/ directories if
successful, address reconfigure dependency.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+linuxmuster-base7 (7.3.29-0) lmn73-testing; urgency=low
+
+  * Refactor Python code to comply with Debian Python Policy (Phase 1).
+  * Create proper Python package structure under src/linuxmuster_base7/.
+  * Add pyproject.toml with complete package metadata (PEP 621).
+  * Convert all CLI tools to use entry points.
+  * Modernize Debian packaging with dh-python and pybuild.
+  * Remove pip usage and .pth file manipulation from postinst.
+  * Add python3-paramiko as proper Debian dependency.
+  * Update all imports to use new package namespace.
+  * See docs/refactoring-phase-1.md for detailed changes.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Di, 11 Nov 2025 11:03:40 +0100
+
 linuxmuster-base7 (7.3.28-0) lmn73; urgency=low
 
   * fix missing missing wan gateway in opnsense after setup if static wan interface was configured (1bd2359).
